# src/modules/reports/report.dto.ts
@@ -1,0 +1,5 @@
+export interface AdministrativeReportParams {
+  recurringConfigurationIds: string[];
+  startDate: string;
+  endDate: string;
+}
